# bbc_news_logger

./: .dockerignore  .gitignore  BBC_News_Most_Read_Scraper.py  DESIGN.md  PRODUCT.md  README.md  article_content_scraper.py  bbc_most_read_log.csv  data_cleanup.py  pyproject.toml
data/: bbc_front_page_promos_2025-04-17.csv  bbc_front_page_promos_2025-04-18.csv  bbc_front_page_promos_2025-04-19.csv  bbc_front_page_promos_2025-04-20.csv  bbc_front_page_promos_2025-04-21.csv  bbc_front_page_promos_2025-04-22.csv  bbc_front_page_promos_2025-04-23.csv  bbc_front_page_promos_2025-04-24.csv  bbc_front_page_promos_2025-04-25.csv  bbc_front_page_promos_2025-04-26.csv  bbc_front_page_promos_2025-04-27.csv  bbc_front_page_promos_2025-04-28.csv  bbc_front_page_promos_2025-04-29.csv  bbc_front_page_promos_2025-04-30.csv  bbc_front_page_promos_2025-05-01.csv  bbc_front_page_promos_2025-05-02.csv  bbc_front_page_promos_2025-05-03.csv  bbc_front_page_promos_2025-05-04.csv  bbc_front_page_promos_2025-05-05.csv  bbc_front_page_promos_2025-05-06.csv  bbc_front_page_promos_2025-05-07.csv  bbc_front_page_promos_2025-05-08.csv  bbc_front_page_promos_2025-05-09.csv  bbc_front_page_promos_2025-05-10.csv  bbc_front_page_promos_2025-05-11.csv  bbc_front_page_promos_2025-05-12.csv  bbc_front_page_promos_2025-05-13.csv  bbc_front_page_promos_2025-05-14.csv  bbc_front_page_promos_2025-05-15.csv  bbc_front_page_promos_2025-05-16.csv  bbc_front_page_promos_2025-05-17.csv  bbc_front_page_promos_2025-05-18.csv  bbc_front_page_promos_2025-05-19.csv  bbc_front_page_promos_2025-05-20.csv  bbc_front_page_promos_2025-05-21.csv  bbc_front_page_promos_2025-06-05.csv  bbc_front_page_promos_2025-06-06.csv  bbc_front_page_promos_2025-06-07.csv  bbc_front_page_promos_2025-06-08.csv  bbc_front_page_promos_2025-06-09.csv  (+799 more)
web/: package.json  (+2 more)
(+451 files in other folders)
