[project]
name = "bbc_news_logger"
version = "0.1.0"
dependencies = [
    "requests==2.31.0",
    "beautifulsoup4==4.12.3",
    "pandas==2.2.2",
    "pyarrow==15.0.2",
    "aiohttp==3.9.5",
    "selectolax==0.3.17",
]

[project.optional-dependencies]
dev = [
    "pytest==8.1.1",
    "pytest-asyncio==0.23.5",
]

[build-system]
requires = ["setuptools>=64", "wheel", "uv>=0.1.32"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
