[project]
name = "bbc-news-logger"
version = "0.2.0"
description = "Collect, publish, and explore BBC News front-page and most-read observations."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "aiohttp>=3.11,<4",
    "beautifulsoup4>=4.12,<5",
    "duckdb>=1.3,<2",
    "huggingface-hub>=0.34,<2",
    "pyarrow>=23.0.1,<23.0.2",
    "pytz>=2025.2",
    "requests>=2.32,<3",
    "selectolax>=0.3.32,<0.4",
]

[project.optional-dependencies]
embedding = [
    "fastembed>=0.7,<1",
    "numpy>=2,<3",
]
semantic = [
    "fastembed>=0.7,<1",
    "fastapi>=0.116,<1",
    "fenic[mcp]>=0.10,<0.11",
    "numpy>=2,<3",
    "uvicorn[standard]>=0.35,<1",
]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.4,<9",
    "pytest-asyncio>=1.1,<2",
    "ruff>=0.12,<1",
]

[project.scripts]
bbc-news = "bbc_news_logger.cli:main"

[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
